[gd_scene load_steps=19 format=3 uid="uid://unm41ipcnua2"]

[ext_resource type="Script" path="res://Scripts/ball.gd" id="1_8cf0k"]
[ext_resource type="Texture2D" uid="uid://6m3kp3gtau2t" path="res://Assets/arts/Ball.png" id="1_8nktk"]
[ext_resource type="Script" path="res://Scripts/game_manager.gd" id="1_lfm4e"]
[ext_resource type="PackedScene" uid="uid://b2npvgwxqt7d7" path="res://Scenes/player.tscn" id="3_01aqu"]
[ext_resource type="Texture2D" uid="uid://k3ugquji8fgv" path="res://Assets/arts/Player.png" id="4_o0nxp"]
[ext_resource type="Texture2D" uid="uid://dx8pjjfs18km6" path="res://Assets/arts/Computer.png" id="4_tft0p"]
[ext_resource type="Texture2D" uid="uid://c2fdoc4jmebhh" path="res://Assets/arts/ScoreBar.png" id="5_xjyr8"]
[ext_resource type="Texture2D" uid="uid://laku02i5hdmw" path="res://Assets/arts/Board.png" id="6_nb2fi"]
[ext_resource type="Script" path="res://Scripts/player_left.gd" id="7_umkkf"]
[ext_resource type="Script" path="res://Scripts/powerup_manager.gd" id="10_tdddr"]
[ext_resource type="Script" path="res://Scripts/BeginningCountdown.gd" id="11_iuyer"]

[sub_resource type="Curve" id="Curve_awbyw"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_ehaen"]
offsets = PackedFloat32Array(0.00666667, 0.226667, 1)
colors = PackedColorArray(1, 0.12549, 0.866667, 1, 1, 1, 0, 1, 1, 1, 1, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_1ig71"]
radius = 15.0333

[sub_resource type="LabelSettings" id="LabelSettings_cgjii"]
font_size = 45
shadow_size = 10
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tgy7s"]
size = Vector2(1152, 201)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_icfj3"]
size = Vector2(348, 628)

[sub_resource type="LabelSettings" id="LabelSettings_5di44"]
font_size = 64
shadow_size = 16

[node name="Main" type="Node2D"]
script = ExtResource("1_lfm4e")

[node name="Board" type="Sprite2D" parent="."]
position = Vector2(575.375, 324)
scale = Vector2(1.44233, 1.42637)
texture = ExtResource("6_nb2fi")

[node name="Ball" type="Area2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(0.5, 0.5)
script = ExtResource("1_8cf0k")

[node name="CPUParticles2D" type="CPUParticles2D" parent="Ball"]
lifetime = 0.4
fixed_fps = 30
texture = ExtResource("1_8nktk")
gravity = Vector2(0, 0)
scale_amount_min = 0.5
scale_amount_max = 0.5
scale_amount_curve = SubResource("Curve_awbyw")
color_ramp = SubResource("Gradient_ehaen")

[node name="Sprite" type="Sprite2D" parent="Ball"]
texture = ExtResource("1_8nktk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("CircleShape2D_1ig71")

[node name="Scoreboard" type="Node2D" parent="."]

[node name="ScoreBar" type="Sprite2D" parent="Scoreboard"]
position = Vector2(746.5, 23.5)
texture = ExtResource("5_xjyr8")

[node name="ScoreBar2" type="Sprite2D" parent="Scoreboard"]
position = Vector2(404.5, 23.5)
texture = ExtResource("5_xjyr8")
flip_h = true

[node name="PlayerLeftScore" type="Label" parent="Scoreboard"]
offset_left = 522.0
offset_top = -10.0
offset_right = 562.0
offset_bottom = 53.0
text = "0"
label_settings = SubResource("LabelSettings_cgjii")

[node name="PlayerRightScore" type="Label" parent="Scoreboard"]
offset_left = 600.0
offset_top = -11.0
offset_right = 640.0
offset_bottom = 52.0
text = "0"
label_settings = SubResource("LabelSettings_cgjii")

[node name="Players" type="Node" parent="."]

[node name="PlayerLeft" parent="Players" instance=ExtResource("3_01aqu")]
position = Vector2(22, 324)
script = ExtResource("7_umkkf")
sprite = ExtResource("4_tft0p")
control_up = "p_left_up"
control_down = "p_left_down"

[node name="PlayerRight" parent="Players" instance=ExtResource("3_01aqu")]
position = Vector2(1130, 324)
sprite = ExtResource("4_o0nxp")
ball_direction = Vector2(-1, 0)
control_up = "p_right_up"
control_down = "p_right_down"

[node name="Borders" type="Node" parent="."]

[node name="Top" type="Area2D" parent="Borders"]
position = Vector2(575, 37)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/Top"]
position = Vector2(0, -92)
shape = SubResource("RectangleShape2D_tgy7s")

[node name="Bottom" type="Area2D" parent="Borders"]
position = Vector2(576, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/Bottom"]
position = Vector2(0, 738.5)
shape = SubResource("RectangleShape2D_tgy7s")

[node name="Left" type="Area2D" parent="Borders"]
position = Vector2(0, 324)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/Left"]
position = Vector2(-173, 0)
shape = SubResource("RectangleShape2D_icfj3")

[node name="Right" type="Area2D" parent="Borders"]
position = Vector2(1152, 324)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/Right"]
position = Vector2(175, 0)
shape = SubResource("RectangleShape2D_icfj3")

[node name="PowerUpManager" type="Node2D" parent="."]
script = ExtResource("10_tdddr")

[node name="Timers" type="Node" parent="."]

[node name="SpikeBallSpawnTimer" type="Timer" parent="Timers"]
autostart = true

[node name="GetBiggerBallSpawnTimer" type="Timer" parent="Timers"]
autostart = true

[node name="GetSmallerBallSpawnTimer" type="Timer" parent="Timers"]
autostart = true

[node name="BeginningCountdown" type="Node2D" parent="."]
position = Vector2(576, 147)
script = ExtResource("11_iuyer")

[node name="Label" type="Label" parent="BeginningCountdown"]
offset_left = -19.0
offset_top = -1.0
offset_right = 21.0
offset_bottom = 87.0
text = "3"
label_settings = SubResource("LabelSettings_5di44")

[connection signal="area_entered" from="Ball" to="Ball" method="_on_area_entered"]
[connection signal="bounced_from_left" from="Ball" to="." method="_on_ball_bounced_from_left"]
[connection signal="bounced_from_left" from="Ball" to="Players/PlayerRight" method="_on_ball_bounced_from_left"]
[connection signal="bounced_from_left" from="Ball" to="PowerUpManager" method="_on_ball_bounced_from_left"]
[connection signal="bounced_from_right" from="Ball" to="." method="_on_ball_bounced_from_right"]
[connection signal="bounced_from_right" from="Ball" to="Players/PlayerRight" method="_on_ball_bounced_from_right"]
[connection signal="bounced_from_right" from="Ball" to="PowerUpManager" method="_on_ball_bounced_from_right"]
[connection signal="get_bigger_ball_touched" from="Ball" to="." method="_on_ball_get_bigger_ball_touched"]
[connection signal="get_bigger_ball_touched" from="Ball" to="Players/PlayerRight" method="_on_ball_get_bigger_ball_touched"]
[connection signal="get_bigger_ball_touched" from="Ball" to="PowerUpManager" method="_on_ball_get_bigger_ball_touched"]
[connection signal="get_smaller_ball_touched" from="Ball" to="Players/PlayerRight" method="_on_ball_get_smaller_ball_touched"]
[connection signal="get_smaller_ball_touched" from="Ball" to="PowerUpManager" method="_on_ball_get_smaller_ball_touched"]
[connection signal="hand_over" from="Ball" to="." method="_on_ball_hand_over"]
[connection signal="ice_spike_ball_touched" from="Ball" to="." method="_on_ball_ice_spike_ball_touched"]
[connection signal="ice_spike_ball_touched" from="Ball" to="Players/PlayerRight" method="_on_ball_ice_spike_ball_touched"]
[connection signal="ice_spike_ball_touched" from="Ball" to="PowerUpManager" method="_on_ball_ice_spike_ball_touched"]
[connection signal="power_used" from="Players/PlayerLeft" to="." method="_on_player_left_power_used"]
[connection signal="power_used" from="Players/PlayerLeft" to="PowerUpManager" method="_on_player_left_power_used"]
[connection signal="ai_get_bigger" from="Players/PlayerRight" to="Players/PlayerLeft" method="_on_player_right_ai_get_bigger"]
[connection signal="ai_get_smaller" from="Players/PlayerRight" to="Players/PlayerLeft" method="_on_player_right_ai_get_smaller"]
[connection signal="ai_ice_spike_ready" from="Players/PlayerRight" to="." method="_on_player_right_ai_ice_spike_ready"]
[connection signal="ai_ice_spike_ready" from="Players/PlayerRight" to="Players/PlayerLeft" method="_on_player_right_ai_ice_spike_ready"]
[connection signal="player_ice_spike_ready" from="Players/PlayerRight" to="." method="_on_player_right_player_ice_spike_ready"]
[connection signal="power_used" from="Players/PlayerRight" to="." method="_on_player_right_power_used"]
[connection signal="power_used" from="Players/PlayerRight" to="PowerUpManager" method="_on_player_right_power_used"]
[connection signal="get_bigger_available_left" from="PowerUpManager" to="Players/PlayerLeft" method="_on_power_up_manager_get_bigger_available_left"]
[connection signal="get_bigger_available_right" from="PowerUpManager" to="Players/PlayerRight" method="_on_power_up_manager_get_bigger_available_right"]
[connection signal="get_smaller_available_left" from="PowerUpManager" to="Players/PlayerLeft" method="_on_power_up_manager_get_smaller_available_left"]
[connection signal="get_smaller_available_right" from="PowerUpManager" to="Players/PlayerRight" method="_on_power_up_manager_get_smaller_available_right"]
[connection signal="ice_spike_available_left" from="PowerUpManager" to="Players/PlayerLeft" method="_on_power_up_manager_ice_spike_available_left"]
[connection signal="ice_spike_available_right" from="PowerUpManager" to="Players/PlayerRight" method="_on_power_up_manager_ice_spike_available_right"]
[connection signal="timeout" from="Timers/SpikeBallSpawnTimer" to="." method="_on_spike_ball_spawn_timer_timeout"]
[connection signal="timeout" from="Timers/SpikeBallSpawnTimer" to="PowerUpManager" method="_on_spike_ball_spawn_timer_timeout"]
[connection signal="timeout" from="Timers/GetBiggerBallSpawnTimer" to="PowerUpManager" method="_on_get_bigger_ball_spawn_timer_timeout"]
[connection signal="timeout" from="Timers/GetSmallerBallSpawnTimer" to="PowerUpManager" method="_on_get_smaller_ball_spawn_timer_timeout"]
